# systemd-failed

./: .gitignore  Cargo.toml  LICENSE  Makefile  flake.nix
src/: main.rs
